--- a/templates/details.html
+++ b/templates/details.html
@@ -46,7 +46,7 @@
       {% endif %}
     </div>
     {# 2/3 columns #}
-    <div class="col-4 p-4">
+    <div class="col-4 p-4 d-flex flex-column align-items-center">
       {% if hours[7] == True %}
       <p class="hours-open">Open Now</p>
       {% else %}
@@ -77,9 +77,9 @@
       </table>
     </div>
     {# 3/3 columns #}
-    <div class="col-4 p-4">
-        <p>Yelp Rating: {{ cafe.rating }} / 5</p>
-        <p>Google Rating: {{ google_cafe["rating"] }} / 5</p>
+    <div class="col-4 p-4 d-flex flex-column align-items-center">
+        <p>Yelp Rating:<span class="stars"> {{ cafe.rating }}</span></p>
+        <p>Google Rating:<span class="stars"> {{ google_cafe["rating"] }}</span></p>
         <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
     </div>
     </div>
@@ -176,8 +176,8 @@
           <div class="edit-form">
             <form name="updating" id="updating" action="/updating" method="POST">
               <div class="mb-3">
-                <label for="updatedrating" class="form-label">Rating</label>
-                <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating"> 
+                <label for="updatedrating" class="form-label">Rating:</label><span class="bubble"></span>
+                  <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
                 <label for="updatedreview" class="form-label">Review</label>
                 <textarea class="form-control" id="updatedreview" rows="3" name="updatedreview"></textarea>
               </div>
@@ -188,8 +188,8 @@
           {% else %}
           <form name="reviewing" id="reviewing" action="/reviewing" method="POST">
             <div class="mb-3">
-              <label for="rating" class="form-label">Rating</label>
-              <input type="range" class="form-range" min="1" max="5" id="rating" name="rating"> 
+              <label for="rating" class="form-label">Rating:</label><span class="bubble"></span>
+                <input type="range" class="form-range" min="1" max="5" id="rating" name="rating">
               <label for="review" class="form-label">Review</label>
               <textarea class="form-control" id="review" rows="3" name="review"></textarea>
             </div>
@@ -198,7 +198,7 @@
           <div class="edit-form">
             <form name="updating" id="updating" action="/updating" method="POST">
               <div class="mb-3">
-                <label for="updatedrating" class="form-label">Rating</label>
+                <label for="updatedrating" class="form-label">Rating:</label><span class="bubble"></span>
                 <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
                 <label for="updatedreview" class="form-label">Review</label>
                 <textarea class="form-control" id="updatedreview" rows="3" name="updatedreview"></textarea>
@@ -224,4 +224,6 @@
 </script>
 <script src="/static/js/favorites.js" type="text/javascript"></script>
 <script src="/static/js/form.js" type="text/javascript"></script>
+<script src="/static/js/ratings.js" type="text/javascript"></script>
+<script src="/static/js/slider.js" type="text/javascript"></script>
 {% endblock %}
