--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+
     <head>
+        <!-- Dynamic title dependent on page -->
         <title>{% block title %} Project Title {% endblock %}</title>
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -8,9 +10,13 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/static/css/style.css">
+        <!-- Block for more head content -->
         {% block head %} {% endblock %}
     </head>
+
     <body>
+      <!-- Display navbar only if user is logged in -->
+      {% if login %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <div class="navbar-nav">
@@ -26,17 +32,20 @@
                 </div>
               </div>
             </div>
-          </nav>
-        {% for msg in get_flashed_messages() %}
-        <p class="flash-msg">
-        {{ msg }}
-        </p>
-        {% endfor %}
-        {% block content %} Content Here {% endblock %}
-         <!-- JavaScript Bundle with Popper -->
-         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-         <!-- jQuery -->
-         <script src="https://code.jquery.com/jquery-3.6.0.js"   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="   crossorigin="anonymous"></script>
-         {% block scripts %}{% endblock %}
+        </nav>
+      {% endif %}
+        
+      <!-- Block for body content -->
+      {% block content %} Content Here {% endblock %}
+
+
+      <!-- JavaScript Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      <!-- jQuery -->
+      <script src="https://code.jquery.com/jquery-3.6.0.js"   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="   crossorigin="anonymous"></script>
+      
+      <!-- Block for more scripts -->
+      {% block scripts %}{% endblock %}
     </body>
+    
 </html>
