--- a/templates/details.html
+++ b/templates/details.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %} Cafe Finder - Results{% endblock %}
+{% block title %} Cafe Finder - Details {% endblock %}
 
 {% block content %} 
 
-{# Photo carousel #}
+<!-- Photo carousel -->
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -12,16 +12,27 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
+
+      <!-- Carousel item 1: photo 1 -->
       <div class="carousel-item">
-        <img src="{{ cafe.photos[0] }}" class="d-block w-100" alt="...">
+        <img src="{{ yelp_cafe.photos[0] }}" class="d-block w-100" alt="...">
       </div>
+      <!-- End of carousel item 1 -->
+
+      <!-- Carousel item 2: photo 2 -->
       <div class="carousel-item active">
-        <img src="{{ cafe.photos[1] }}" class="d-block w-100" alt="...">
+        <img src="{{ yelp_cafe.photos[1] }}" class="d-block w-100" alt="...">
       </div>
+      <!-- End of carousel item 2 -->
+
+      <!-- Carousel item 3: photo 3 -->
       <div class="carousel-item">
-        <img src="{{ cafe.photos[2] }}" class="d-block w-100" alt="...">
+        <img src="{{ yelp_cafe.photos[2] }}" class="d-block w-100" alt="...">
       </div>
+      <!-- End of carousel item 3 -->
+
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -31,26 +42,32 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+<!-- End of photo carousel -->
 
-{# Begin container #}
+<!-- Begin container -->
   <div class="container">
     <div class="row justify-content-center">
-    {# 1/3 columns #}
+
+    <!-- 1/3 columns -->
+    <!-- Cafe information -->
     <div class="col-4 p-4">
-      <h1>{{ cafe.name }}</h1>
-      <p>{{ cafe.location.address1 }}</p>
-      <p>{{ cafe.location.city }}, {{ cafe.location.state }} {{ cafe.location.zip_code }}</p>
-      <p>{{ cafe.display_phone }}</p>
+      <h1>{{ yelp_cafe.name }}</h1>
+      <p>{{ yelp_cafe.location.address1 }}</p>
+      <p>{{ yelp_cafe.location.city }}, {{ yelp_cafe.location.state }} {{ yelp_cafe.location.zip_code }}</p>
+      <p>{{ yelp_cafe.display_phone }}</p>
       {% if 'website' in google_cafe %}
         <p><a href="{{ google_cafe['website'] }}" target="_blank">Website</a></p>
       {% endif %}
     </div>
-    {# 2/3 columns #}
+    <!-- End of Column 1 -->
+
+    <!-- 2/3 columns -->
+    <!-- Cafe hours table -->
     <div class="col-4 p-4 d-flex flex-column align-items-center">
       {% if hours[7] == True %}
-      <p class="hours-open">Open Now</p>
+        <p class="hours-open">Open Now</p>
       {% else %}
-      <p class="hours-closed">Closed Now</p>
+        <p class="hours-closed">Closed Now</p>
       {% endif %}
       <table>
         <thead>
@@ -76,28 +93,34 @@
       </tbody>
       </table>
     </div>
-    {# 3/3 columns #}
+    <!-- End of Column 2 -->
+
+    <!-- 3/3 columns -->
+    <!-- Cafe ratings | Favorites button -->
     <div class="col-4 p-4 d-flex flex-column align-items-center">
-        <p>Yelp Rating:<span class="stars"> {{ cafe.rating }}</span></p>
+        <p>Yelp Rating:<span class="stars"> {{ yelp_cafe.rating }}</span></p>
         <p>Google Rating:<span class="stars"> {{ google_cafe["rating"] }}</span></p>
         <p id="favorite">Favorite <i id="heart" class="bi bi-heart"></i></p>
     </div>
+     <!-- End of Column 3 -->
     </div>
   </div>
-  {# End of container #}
+  <!-- End of container -->
 
-  {# DIV for map display #}
-    <div id="cafe_map">
+  <!-- DIV for map display -->
+  <div id="cafe_map">
 
-    </div>
+  </div>
+  <!-- End DIV for map display -->
 
-  {# Begin container #}
+  <!-- Begin container -->
   <div class="container">
     <div class="row justify-content-center">
-      {# 1/1 columns - begin Accordion #}
+      <!-- 1/1 columns - begin Accordion -->
       <div class="col-12 p-4">
         <div class="accordion" id="reviewsAccordion">
-          {# 1/3 accordion items #}
+          <!-- 1/3 accordion items -->
+          <!-- Yelp Reviews (3) -->
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
@@ -106,30 +129,33 @@
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#reviewsAccordion">
               <div class="accordion-body">
+                <!-- For each review -->
                 {% for i in range(3) %}
-                <div class="reviewer">
-                {% if review[i]['user']['image_url'] %}
-                <img src="{{ review[i]['user']['image_url'] }}" class="reviewer_photo"/>
-                {% else %}
-                <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
-                {% endif %}
-                {{ review[i]['user']['name'] }}
-                </div>
+                  <div class="reviewer">
+                    {% if yelp_reviews[i]['user']['image_url'] %}
+                      <img src="{{ yelp_reviews[i]['user']['image_url'] }}" class="reviewer_photo"/>
+                    {% else %}
+                      <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
+                    {% endif %}
+                    {{ yelp_reviews[i]['user']['name'] }}
+                  </div>
                   <p>
-                  {% for s in range(review[i]['rating']) %}
-                  <i class="bi bi-star-fill"></i>
-                  {% endfor %}
+                    <!-- For each number in ratings -->
+                    {% for s in range(yelp_reviews[i]['rating']) %}
+                    <i class="bi bi-star-fill"></i>
+                    {% endfor %}
                   </p>
-                <p>{{ review_dates[i] }}</p>
-                <p>"{{ review[i]['text'] }}"</p>
-                <p><button><a href="{{ review[i]['url'] }}">Read the rest</a></button></p>
+                  <p>{{ yelp_review_dates[i] }}</p>
+                  <p>"{{ yelp_reviews[i]['text'] }}"</p>
+                  <p><button><a href="{{ yelp_reviews[i]['url'] }}">Read the rest</a></button></p>
                 {% endfor %}
               </div>
             </div>
           </div>
-          {# End of accordion item 1 #}
+          <!-- End of accordion item 1 -->
   
-        {# 2/3 accordion items #}
+        <!-- 2/3 accordion items -->
+        <!-- Google Reviews (5) -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -138,29 +164,32 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#reviewsAccordion">
             <div class="accordion-body">
+              <!-- For each review -->
               {% for i in range(5) %}
-        <div class="reviewer">
-          {% if google_cafe['reviews'][i]['profile_photo_url'] %}
-          <img src="{{ google_cafe['reviews'][i]['profile_photo_url'] }}" class="reviewer_photo"/>
-          {% else %}
-        <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
-        {% endif %}
-        {{ google_cafe['reviews'][i]['author_name'] }}
-        </div>
-          <p>
-          {% for s in range(google_cafe['reviews'][i]['rating']) %}
-          <i class="bi bi-star-fill"></i>
-          {% endfor %}
-          </p>
-        <p>{{ google_cafe['reviews'][i]['relative_time_description'] }}</p>
-        <p>"{{ google_cafe['reviews'][i]['text'] }}"</p>
-        {% endfor %}
+                <div class="reviewer">
+                  {% if google_reviews[i]['profile_photo_url'] %}
+                    <img src="{{ google_reviews[i]['profile_photo_url'] }}" class="reviewer_photo"/>
+                  {% else %}
+                    <img src="/static/img/default_reviewer.jpg" class="reviewer_photo"/>
+                  {% endif %}
+                  {{ google_reviews[i]['author_name'] }}
+                </div>
+                <p>
+                  <!-- For each number in ratings -->
+                  {% for s in range(google_reviews[i]['rating']) %}
+                    <i class="bi bi-star-fill"></i>
+                  {% endfor %}
+                </p>
+                <p>{{ google_reviews[i]['relative_time_description'] }}</p>
+                <p>"{{ google_reviews[i]['text'] }}"</p>
+              {% endfor %}
             </div>
           </div>
         </div>
-        {# End of accordion item 2 #}
+        <!-- End of accordion item 2 -->
   
-        {# 3/3 caccordion items #}
+        <!-- 3/3 accordion items-->
+        <!-- User Reviews (1) -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -169,61 +198,89 @@
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#reviewsAccordion">
             <div class="accordion-body">
+
+              <!-- DIV for review display -->
               <div id="my-review">
   
               </div>
+              <!-- End DIV for review display -->
+
+              <!-- If user review exists -->
               {% if user_review %}
-          <div class="edit-form">
-            <form name="updating" id="updating" action="/updating" method="POST">
-              <div class="mb-3">
-                <label for="updatedrating" class="form-label">Rating:</label><span class="bubble"></span>
-                  <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
-                <label for="updatedreview" class="form-label">Review</label>
-                <textarea class="form-control" id="updatedreview" rows="3" name="updatedreview"></textarea>
+
+              <!-- Review editing form -->
+              <div class="edit-form">
+                <form name="updating" id="updating" action="/updating" method="POST">
+                  <div class="mb-3">
+                    <!-- Rating slider -->
+                    <label for="updatedrating" class="form-label">Rating:</label><span class="bubble"></span>
+                    <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
+                    <!-- Review text box -->
+                    <label for="updatedreview" class="form-label">Review</label>
+                    <textarea class="form-control" id="updatedreview" rows="3" name="updatedreview"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-          </div>
-          {% else %}
-          <form name="reviewing" id="reviewing" action="/reviewing" method="POST">
-            <div class="mb-3">
-              <label for="rating" class="form-label">Rating:</label><span class="bubble"></span>
-                <input type="range" class="form-range" min="1" max="5" id="rating" name="rating">
-              <label for="review" class="form-label">Review</label>
-              <textarea class="form-control" id="review" rows="3" name="review"></textarea>
+              <!-- End review editing form -->
+
+              <!-- Else if user review doesn't exist -->
+              {% else %}
+
+              <!-- Review form -->
+              <form name="reviewing" id="reviewing" action="/reviewing" method="POST">
+                <div class="mb-3">
+                  <!-- Rating slider -->
+                  <label for="rating" class="form-label">Rating:</label><span class="bubble"></span>
+                  <input type="range" class="form-range" min="1" max="5" id="rating" name="rating">
+                  <!-- Review text box -->
+                  <label for="review" class="form-label">Review</label>
+                  <textarea class="form-control" id="review" rows="3" name="review"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+              <!-- End review form -->
+
+              <!-- Review editing form -->
+              <div class="edit-form">
+                <form name="updating" id="updating" action="/updating" method="POST">
+                  <div class="mb-3">
+                    <!-- Rating slider -->
+                    <label for="updatedrating" class="form-label">Rating:</label><span class="bubble"></span>
+                    <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
+                    <!-- Review text box -->
+                    <label for="updatedreview" class="form-label">Review</label>
+                    <textarea class="form-control" id="updatedreview" rows="3" name="updatedreview"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
+              <!-- End review editing form -->
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-          <div class="edit-form">
-            <form name="updating" id="updating" action="/updating" method="POST">
-              <div class="mb-3">
-                <label for="updatedrating" class="form-label">Rating:</label><span class="bubble"></span>
-                <input type="range" class="form-range" min="1" max="5" id="updatedrating" name="updatedrating">
-                <label for="updatedreview" class="form-label">Review</label>
-                <textarea class="form-control" id="updatedreview" rows="3" name="updatedreview"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-          </div>
-          {# End of accordion item 3 #}
+          <!-- End of accordion item 3 -->
         </div>
-        {% endif %}
-        </div>
+              {% endif %}
+              <!-- End of if statement -->
       </div>
     </div>
+  </div>
   </div>
 {% endblock %}
 
 {% block scripts %}
-<script src="/static/js/cafe_map.js"></script>
+<!-- Initialize cafe map and create map marker with provided coordinates -->
+<script src="/static/js/cafe-map.js"></script>
+<!-- Create Google map with API key, map ID, and function -->
 <script
   async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2MwTqduMNK_g-86AK2g72L5NOsWAMBk0&map_ids=b3a38d6b637efa469&callback=initMap">
 </script>
+<!-- Save state of favorite button | Add favorited cafe to DB -->
 <script src="/static/js/favorites.js" type="text/javascript"></script>
+<!-- Show reviews | Show/hide review editing form -->
 <script src="/static/js/form.js" type="text/javascript"></script>
+<!-- Display ratings stars -->
 <script src="/static/js/ratings.js" type="text/javascript"></script>
+<!-- Show number selected on ratings form slider -->
 <script src="/static/js/slider.js" type="text/javascript"></script>
 {% endblock %}
